		In Discord gibt es weiterhin den Channel "newsticker-sku-addon". Dort wird neben allgemeinen Infos zum Addon bei jeder neuen Version der Sku-Addons automatisch eine Meldung gepostet.
		Der Download findet jetzt jedoch über die zentrale neue Webseite statt.

	SkuCore
		Neuerungen
			- Das Berufefenster ist im Lokal-Menü verfügbar.
			- Das Ausbildungsfenster für Jägertiere ist im Lokal-Menü verfügbar.
			- Das Stall-Fenster für Jägertiere ist im Lokal-Menü verfügbar.

	SkuDB
		Fehlerkorrekturen
			- Einige Kartendaten wurden entfern. Daher funktionieren jetzt alle Zonen vor Instanzen korrekt (z. B. Gnomeregan, Uldaman etc.)

-------------------------------------------------------------------------------------------------------	
Änderungen in Version 19.11

	SkuOptions:
		Fehlerkorrekturen
			- Das Filtern sollte jetzt auch für die Aktionsleisten korrekt funktionieren und den richtigen Untermenüpunkt hervorbringen.
			- Bei verringerter Beacon-Maximallautstärke geht das Beacon jetzt nicht mehr komplett aus wenn du weit weg bist.


-------------------------------------------------------------------------------------------------------	
Änderungen in Version 19.10

	SkuOptions:
		Fehlerkorrekturen
			- Das Filtern sollte jetzt korrekt funktionieren und den richtigen Untermenüpunkt hervorbringen.


-------------------------------------------------------------------------------------------------------	
Änderungen in Version 19.9

	SkuOptions:
		Fehlerkorrekturen
			- Wenn man aus einem gefilterten Menü in ein Untermenü geht, sollte der Filter nun korrekt gelöscht werden statt für immer bestehen zu bleiben.
		
	SkuQuest:
		Neuerungen
			- In den Menüs "Annahme", "Ziel" und "Abgabe" von Quests hat sich die Untermenüstruktur geändert.
			  Es gibt jetzt immer ein erstes Untermenü pro Mob-/NPC-Typ (z. B. "Hexer", "Ritter", "Fußsoldat", wenn du diese drei Mobtypen für eine Quest killen musst.)
			  Darunter gibt es jeweils drei Menüs: "Route", "Nahe Route" und "Wegpunkt". 