@@ -34,6 +34,7 @@
 	SkuCore
 		Neuerungen
 			- Das Berufefenster ist im Lokal-Menü verfügbar.
+			- Im offenen Berufefenster kannst du jetzt mit BILD-HOCH und BILD-RUNTER in der Liste scrollen.
 			- Das Ausbildungsfenster für Jägertiere ist im Lokal-Menü verfügbar.
 			- Das Stall-Fenster für Jägertiere ist im Lokal-Menü verfügbar.
 
